--- a/simple_recipes/templates/recipes/recipe_add.html
+++ b/simple_recipes/templates/recipes/recipe_add.html
@@ -14,6 +14,7 @@
 
     <form method="POST">
     {{ form.csrf_token }}
+    {{ form.created_by }}
     
     {{ form.recipe_name.label }}
     {{ form.recipe_name }}
