--- a/simple_recipes/templates/recipes/recipe_base.html
+++ b/simple_recipes/templates/recipes/recipe_base.html
@@ -152,34 +152,32 @@
         {{ files }}
     {% endif %}
     
-    {% if data and not form and current_user.is_authenticated and current_user.id == data.created_by %}
+    <div id="images">
+    {% if data.images %}
+        {% for img in data.images %}
+				<a href="{{ url_for('get_image',
+					image_id=img.image_id,
+					file_name=img.image_file_name) }}" data-lightbox="recipe">
+				
+					<img
+						src="{{ url_for('get_image_thumbnail',
+							image_id=img.image_id,
+							file_name=img.image_file_name) }}"
+						alt="{{ img.image_desc }}"/>
+				
+				</a>
+
+        {% endfor %}
+
+	{% endif %}
+	</div>
+
+	{% if data and not form and current_user.is_authenticated and current_user.id == data.created_by %}
 	<a href="{{ url_for('edit_recipe_images', 
 				recipe_id=data['recipe_id']) }}">
 		Edit Images
 	</a>
 	{% endif %}
-    
-    <div id="images">
-    {% if data.images %}
-		<ul>
-        {% for img in data.images %}
-			<li>
-				<a href="{{ url_for('get_image',
-					image_id=img.image_id,
-					file_name=img.image_file_name) }}" data-lightbox="recipe">{{img.image_desc}}</a>
-			</li>
-			{#
-            <img 
-                src="{{ url_for('get_image', 
-                    image_id=img.image_id, 
-                    file_name=img.image_file_name) }}" 
-                alt="{{ img.image_desc }}" 
-				data-lightbox="{{ img.image_desc }}" />
-			#}
-        {% endfor %}
-		</ul>
-    {% endif %}
-    </div>
     
     {% endblock images %}
     </div>
