added some spacing between adjacent A tags with style.css

--- a/simple_recipes/static/style.css
+++ b/simple_recipes/static/style.css
@@ -5,6 +5,10 @@ body {
 	font-family : Verdana, sans-serif;
     clear : left;
 }
+
+a + a {
+    margin-left: 0.25em;
+}
 	
 h2 {
 	font-size : 1.75em;
