--- a/simple_recipes/templates/recipes/recipe_base.html
+++ b/simple_recipes/templates/recipes/recipe_base.html
@@ -40,8 +40,34 @@
 
 	{# ------------------------------------------------------------ #}
 	{% block recipe %}
+
+	{% block tags %}
+		<div id="tags_content">
+		<ul>
+
+		{% if data and not form and current_user.is_authenticated and current_user.id == data.created_by %}
+			<li>
+			<a href="{{ url_for('edit_recipe_tags', 
+						recipe_id=data['recipe_id'],
+						_anchor="tags_content") }}">
+				Edit Tags
+			</a>
+			</li>
+		{% endif %}
+
+		{% if data['tags'] %}
+			{% for tag in data['tags'] %}
+				<li>
+					<span>{{ tag['tag_name'] }}</span>
+				</li>
+			{% endfor %}
+		{% endif %}
+
+		</ul>
+		</div>
+		{% endblock tags %}
 	
-	<dl>		
+	<dl>
 		<dt>Servings</dt>
 		<dd>
 		{% if data['servings'] %}
@@ -129,30 +155,6 @@
 	</a>
 	{% endif %}
 	{% endblock instructions %}
-    </div>
-	{# ------------------------------------------------------------ #}
-	<h3 id="tags_header">Tags</h3>
-    <div id="tags_content">
-	{% block tags %}
-
-	{% if data['tags'] %}
-	<ul>
-	{% for tag in data['tags'] %}
-		<li>
-			{{ tag['tag_name'] }}
-		</li>
-	{% endfor %}
-	</ul>
-	{% endif %}
-	
-	{% if data and not form and current_user.is_authenticated and current_user.id == data.created_by %}
-	<a href="{{ url_for('edit_recipe_tags', 
-				recipe_id=data['recipe_id'],
-				_anchor="tags_content") }}">
-		Edit Tags
-	</a>
-	{% endif %}
-	{% endblock tags %}
     </div>
 	{# ------------------------------------------------------------ #}
     <h3 id="images_header">Images</h3>
