--- a/simple_recipes/templates/_base.html
+++ b/simple_recipes/templates/_base.html
@@ -6,7 +6,7 @@
 		<link
 			rel="stylesheet" 
 			href="{{ url_for('static', filename='style.css') }}" />
-		<link href="{{ url_for('static', filename='lightbox.css') }}" rel="stylesheet" />
+		<link href="{{ url_for('static', filename='lightbox/lightbox.css') }}" rel="stylesheet" />
         <link 
             rel="shortcut icon" 
             href="{{ url_for('static', filename='favicon.ico') }}">
@@ -48,7 +48,7 @@
 		{% endblock content %}
 		</div>
 
-		<script src="{{url_for('static', filename='lightbox-plus-jquery.js') }}"></script>
+		<script src="{{url_for('static', filename='lightbox/lightbox-plus-jquery.js') }}"></script>
 	</body>
 
 </html>
