--- a/simple_recipes/static/style.css
+++ b/simple_recipes/static/style.css
@@ -127,7 +127,7 @@ input[type="file"] {
 /* definition list styling */
 dl {
     border-top : solid 1px black; 
-    border-bottom : solid 1px black;
+    /* border-bottom : solid 1px black; */
 }
 
 dt {
